--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -20,15 +20,25 @@ jobs:
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
       # Override language selection by uncommenting this and choosing your languages
-      # with:
+      with:
          languages: cpp
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
 
     - run: |
-       make bootstrap
-       make release
+       wget -O /usr/local/bin/bazel https://github.com/bazelbuild/bazelisk/releases/latest/download/bazelisk-linux-amd64
+       chmod +x /usr/local/bin/bazel
+       apt-get install libtool cmake automake autoconf make ninja-build curl unzip virtualenv
+       mkdir clang9
+       cd clang9
+       wget https://releases.llvm.org/9.0.0/clang+llvm-9.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz
+       tar -xf clang+llvm-9.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz --strip-components 1
+       cd ..
+       export CLANG_TOOLCHAIN=clang9
+       export CC=$CLANG_TOOLCHAIN/bin/clang
+       export CXX=$CLANG_TOOLCHAIN/bin/clang++
+       /usr/local/bin/bazel build //source/exe:envoy-static
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
